# AutonomousCarEntry

./: README.md
EntranceAssignment/Assignment 3/: agency.cpp  agency.h  astronaut.cpp  astronaut.h  main.cpp  mission.cpp  mission.h  passenger.cpp  passenger.h  person.cpp  person.h
Homework 1/teleop_cpp/: package.xml
Homework 1/teleop_cpp/src/: path_publisher.cpp
Homework 2/: CMakeLists.txt  Menu.cpp  Menu.hpp  NoteToMyself.txt  README.txt  Recommender.hpp  justincase.cpp  main.cpp  restaurant  restaurant_bot  user_data.json  weights.json
Homework1/teleop_cpp/: CMakeLists.txt  README.txt
Homework1/teleop_cpp/src/: stanley_controller.cpp  virdult_teleop_key.cpp
